pihole/pihole.ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: "pihole"
  name: "pihole-ingress"
spec:
  rules:
  - host: "pihole.k3s.securait.local"
    http:
      paths:
        - backend:
            service:
              name: "pihole-web"
              port:
                number: 80
          path: "/"
          pathType: Prefix
  tls:
  - hosts:
    - pihole.k3s.securait.local
